# scGPT

./: .gitignore  README.md  pyproject.toml
examples/: finetune_integration.py
scgpt/: __init__.py
scgpt/model/: __init__.py  flash_attn_compat.py  generation_model.py  model.py  multiomic_model.py
scgpt/tokenizer/: __init__.py  gene_tokenizer.py  vocab_compat.py
scgpt/utils/: util.py
scripts/: README.md  diagnose_flash_attn.py
scripts/diagnostics/: README.md  diagnose_flash_attn.py
scripts/examples/: finetune_integration.py
tests/: test_flash_attn.py  test_scbank.py  test_scformer.py  test_tokenizer.py
